@startuml

class X264Properties{
	- keyInt : int
	- minKeyInt : int
	- sceneCut : int
	- bFrames : int
	- bAdapt : int
	- qp : int
	- bitrate :int
	- bFrameBias : boolean
	- crf : int
	- qpStep : int
	- pbRatio : int
	- chromaOffset : int
	- rateTol : float
	- pass : byte
	- stats : boolean
	- direct : int
	- meRange : int
	- weightB : boolean
	- noFastPSkip : boolean
}

class Builder{
	- keyInt : int
	- minKeyInt : int
	- sceneCut : int
	- bFrames : int
	- bAdapt : int
	- qp : int
	- bitrate :int
	- bFrameBias : boolean
	- crf : int
	- qpStep : int
	- pbRatio : int
	- chromaOffset : int
	- rateTol : float
	- pass : byte
	- stats : boolean
	- direct : int
	- meRange : int
	- weightB : boolean
	- noFastPSkip : boolean
  
	+ keyInt(keyInt:int) : Builder
	+ minKeyInt(minKeyInt:int) : Builder
	+ sceneCut(sceneCut:int) : Builder
	+ bFrames(bFrames:int) : Builder
	+ bAdapt(bAdapt:int) : Builder
	+ qp(qp:int) : Builder
	+ bitrate(bitrate:int) : Builder
	+ bFrameBias(bFrameBias:boolean) : Builder
	+ crf(crf:int) : Builder
	+ qpStep(qpStep:int) : Builder
	+ pbRatio(pbRatio:int) : Builder
	+ chromaOffset(chromaOff:int) : Builder
	+ rateTol(rateTol:float) : Builder
	+ pass(pass:byte) : Builder
	+ stats(stats:boolean) : Builder
	+ direct(direct:int) : Builder
	+ meRange(meRange:int) : Builder
	+ weightB(weightB:boolean) : Builder
	+ noFastPSkip(noFastPSkip:boolean) : Builder
	+ build() : X264Properties
}

class X264PropertiesTest {
    + X264PropertiesBuilderTest() : void
}

Builder --+ X264Properties
X264PropertiesTest ..> X264Properties
X264PropertiesTest ..> Builder


@enduml